# dendeGenetic

./: .gitignore  AnalysisManager.cpp  AnalysisManager.h  CMakeLists.txt  Genetic.cpp  Genetic.h  GeneticException.h  IOManager.cpp  IOManager.h  LocalSearchManager.cpp  LocalSearchManager.h  ProcessManager.cpp  ProcessManager.h  README.md  Solution.cpp  Solution.h  Utils.h  genetic.py  main.cpp  serializer.py  version.md
old_python/: main.py  parameters.py  prova.py  solution.py
